# calendar-bmstu-rs

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  task.md
migrations/: 001_initial_schema.sql
src/: database.rs  main.rs  models.rs
src/handlers/: events.rs  simple_events.rs
static/: app.js  index.html  styles.css
static-site/: index.html  style.css
